# flash-opd

./: README.md  pyproject.toml
configs/: api_teacher.yaml  default.yaml  ds_zero2.json
data/: demo.jsonl
examples/: quickstart.py
flashopd/: __init__.py  balancer.py  cli.py  config.py  loss.py  rollout.py  teacher.py  train.py  trainer.py
scripts/: run_distill.sh  run_distill_deepspeed.sh
